--- a/stylesheets/chromebay.css
+++ b/stylesheets/chromebay.css
@@ -8,6 +8,7 @@ a:hover{color: #666;}
 
 #chromebay-container{
 	width: 360px;
+	min-height: 240px;
 	padding: 10px;
 }
 
@@ -91,4 +92,31 @@ a.query_btn{
 .icon-volume-up {
 	background-position: -408px -24px;
 	cursor: pointer;
+}
+
+::-webkit-scrollbar {
+	width: 14px;
+	height: 16px;
+}
+::-webkit-scrollbar-thumb {
+	min-height: 28px;
+	padding-top: 100px;
+	border-left: 1px solid transparent;
+	border-right: 1px solid transparent;
+	border-top: 0 solid transparent;
+	border-bottom: 0 solid transparent;
+	background-clip: padding-box;
+	background-color: #ddd;
+	-webkit-box-shadow: inset 1px 1px 0 rgba(0, 0, 0, 0.1), inset 0 -1px 0 rgba(0, 0, 0, 0.07);
+}
+
+::-webkit-scrollbar-button {
+	height: 0;
+	width: 0;
+}
+
+::-webkit-scrollbar-track {
+	border-left: 1px solid transparent;
+	border-right: 1px solid transparent;
+	background-clip: padding-box;
 }
