--- a/stylesheets/chromebay.css
+++ b/stylesheets/chromebay.css
@@ -57,21 +57,24 @@ a.query_btn{
 	left: 3px;
 	display: none;
 }
-#chromebay-word{font-size: 32px;font-weight: bold;padding-bottom: 10px;font-family: 'Times New Roman','Georgia';text-shadow: 1px 1px 2px #999;}
-#chromebay-pron{font-size: 14px;margin: 6px 0;position: relative;}
-#chromebay-pron img{cursor: pointer;}
-#chromebay-pron .tools{position: absolute;top:-7px;right: 10px;}
-#chromebay-pron .tools a{display: inline-block;padding: 2px 6px;background: #efefef;font-size: 12px;}
-#chromebay-pron .tools span{display: inline-block;padding: 2px 6px;font-size: 12px;}
-#chromebay-pron .tools a:hover{background: #e5e5e5;}
-#chromebay-definition{font-size: 14px;margin-bottom: 5px;}
-#chromebay-en-definitions{border-radius: 5px;width: 340px;}
-#chromebay-en-definitions li{padding:2px 0;line-height: 160%!important;color: #333!important;}
-#chromebay-loginLink{ margin: 20px auto 0 auto;text-align: center;display: none;}
-#chromebay-loginLink a{font-size: 26px; font-family: "Microsoft Yahei";}
-#chromebay-loginLink span{font-size: 12px;color:#999;display:block;padding: 5px 0;font-family: "Microsoft Yahei";}
-#chromebay-examples div{padding:10px;background: #eee;margin: 10px 0;}
-#chromebay-examples .entry{color:orange;}
+.chromebay .word{font-size: 32px;font-weight: bold;padding-bottom: 10px;font-family: 'Times New Roman','Georgia';text-shadow: 1px 1px 2px #999;}
+.chromebay .pron{font-size: 14px;margin: 6px 0;position: relative;}
+.chromebay .pron img{cursor: pointer;}
+.chromebay .pron .tools{position: absolute;top:-7px;right: 10px;}
+.chromebay .pron .tools a{display: inline-block;padding: 2px 6px;background: #efefef;font-size: 12px;}
+.chromebay .pron .tools span{display: inline-block;padding: 2px 6px;font-size: 12px;}
+.chromebay .pron .tools a:hover{background: #e5e5e5;}
+.chromebay .definition{font-size: 14px;margin-bottom: 5px;}
+.chromebay .en-definitions{border-radius: 5px;width: 340px;}
+.chromebay .en-definitions li{padding:2px 0;line-height: 160%!important;color: #333!important;}
+.chromebay .login{ margin: 20px auto 0 auto;text-align: center;}
+.chromebay .login a{font-size: 26px; font-family: "Microsoft Yahei";}
+.chromebay .login span{font-size: 12px;color:#999;display:block;padding: 5px 0;font-family: "Microsoft Yahei";}
+.chromebay .examples div{padding:10px;background: #eee;margin: 10px 0;}
+.chromebay .examples .entry{color:orange;}
+.chromebay .add-status{width:60px;}
+.chromebay .studied{color:#528FC3!important;}
+.chromebay .cancel{display: inline-block!important;padding-right: 10px;}
 
 [class^="icon-"], [class*=" icon-"] {
 	display: inline-block;
@@ -84,7 +87,7 @@ a.query_btn{
 	background-repeat: no-repeat;
 	margin-top: 3px;
 }
-.icon-volume-up {
+.chromebay .icon-volume-up {
 	background-position: -408px -24px;
 	cursor: pointer;
 }
