--- a/stylesheets/omnix.css
+++ b/stylesheets/omnix.css
@@ -49,20 +49,20 @@
 }
 
 .chromebay .foot{padding:5px 10px;width: 100%;text-align: right;}
-.chromebay .content{padding:10px 20px;line-height: 180%;width:360px;font-size: 12px;border:none!important;background: transparent;min-height: 100px;}
-
-#chromebay-word{font-size: 32px;font-weight: bold;padding-bottom:10px!important;font-family: 'Times New Roman','Georgia';text-shadow: 1px 1px 2px #999;}
-#chromebay-pron{font-size: 14px;margin-bottom: 6px!important;font-family: arial,sans-serif;position: relative;}
-#chromebay-pron .tools{position: absolute;top:-7px;right: 10px;}
-#chromebay-pron .tools a{display: inline-block;padding: 2px 6px;background: #efefef;font-size: 12px!important;font-weight: normal!important;font-family: "Microsoft Yahei"!important;}
-#chromebay-pron .tools span{display: inline-block;padding: 2px 6px;font-size: 12px!important;font-weight: normal!important;font-family: "Microsoft Yahei"!important;}
-#chromebay-pron .tools a:hover{background: #e5e5e5;}
-#chromebay-definition{font-size: 14px;font-family: "Microsoft Yahei";line-height: 160%!important;}
-#chromebay-en-definitions{font-size: 12px;font-family: arial,sans-serif;}
-#chromebay-en-definitions .key{margin-top: 5px;line-height: 160%;}
-#chromebay-en-definitions li{line-height: 180%;padding: 2px 0!important;}
-#chromebay-examples div{padding:10px;background: #eee;margin: 10px 0;}
-#chromebay-examples .entry{color:orange;}
+.chromebay .content{padding:10px 20px;line-height: 180%;width:360px;font-size: 12px!important;border:none!important;background: transparent;min-height: 100px;}
+.chromebay .undefined{font-size: 12px!important;}
+.chromebay-word{font-size: 32px;font-weight: bold;padding:15px 0!important;font-family: 'Times New Roman','Georgia'!important;text-shadow: 1px 1px 2px #999;}
+.chromebay-pron{font-size: 14px;margin-bottom: 6px!important;font-family: arial,sans-serif;position: relative;}
+.chromebay-pron .tools{position: absolute;top:-7px;right: 10px;}
+.chromebay-pron .tools a{display: inline-block;padding: 2px 6px;background: #efefef;font-size: 12px!important;font-weight: normal!important;font-family: "Microsoft Yahei"!important;}
+.chromebay-pron .tools span{display: inline-block;padding: 2px 6px;font-size: 12px!important;font-weight: normal!important;font-family: "Microsoft Yahei"!important;}
+.chromebay-pron .tools a:hover{background: #e5e5e5;}
+.chromebay-definition{font-size: 14px;font-family: "Microsoft Yahei";line-height: 160%!important;}
+.chromebay-en-definitions{font-size: 12px;font-family: arial,sans-serif;}
+.chromebay-en-definitions .key{margin-top: 5px;line-height: 160%;}
+.chromebay-en-definitions li{line-height: 180%;padding: 2px 0!important;}
+.chromebay-examples div{padding:10px;background: #eee;margin: 10px 0;font-size: 12px!important;}
+.chromebay-examples .entry{color:orange;}
 
 .chromebay [class^="icon-"],.chromebay [class*=" icon-"] {
 	display: inline-block;
