--- a/stylesheets/omnix.css
+++ b/stylesheets/omnix.css
@@ -1,4 +1,4 @@
-.chromebay{
+#chromebay-ominx-container{
 	text-align:left;
 	box-shadow:1px 1px 4px #666;
 	z-index:999999;
@@ -16,53 +16,61 @@
 	color: #666!important;
 
 }
-.chromebay div, .chromebay table, .chromebay td{width:auto;margin: 0;padding: 0;border:none!important;}
-.chromebay table, .chromebay td{background:#fff!important;height: auto!important;}
-.chromebay ul{
-	margin: 0;
-	padding: 0!important;
-	list-style-type:square;
-	list-style-position:inside;
-	border:none!important;
-}
-.chromebay li{padding: 5px 0;margin:0;font-size: 12px!important;}
-.chromebay a:link,.chromebay a:visited{color: #0088cc;text-decoration: none; font-size: 12px;font-weight: normal;font-family: inherit;}
-.chromebay a:hover{color: #666;}
 
-.chromebay .head{
+
+#chromebay-ominx-container .head{
 	padding:5px;
 	position: relative;
 	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #ededed), color-stop(1, #dfdfdf));
 }
-.chromebay .head span{
+#chromebay-ominx-container .head span{
 	font-size:14px;
 	padding:6px 10px;
 	text-decoration:none;
 	color: #666;
 	text-shadow:1px 1px 0px #ffffff;
 }
-.chromebay .head .btnClose{
+#chromebay-ominx-container .head .close{
 	position: absolute;
 	top:5px;
 	right: 10px;
 	color: #666;
 }
 
-.chromebay .foot{padding:5px 10px;width: 100%;text-align: right;}
-.chromebay .content{padding:10px 20px;line-height: 180%;width:360px;font-size: 12px!important;border:none!important;background: transparent;min-height: 100px;}
+#chromebay-ominx-container .foot{padding:5px 10px;width: 100%;text-align: right;}
+#chromebay-ominx-container .content{padding:10px 20px;line-height: 180%;width:360px;font-size: 12px!important;border:none!important;background: transparent;min-height: 100px;}
+
+.chromebay div, 
+.chromebay table, 
+.chromebay td{width:auto;margin: 0;padding: 0;border:none!important;}
+
+.chromebay table,
+.chromebay td{height: auto!important;}
+
+.chromebay ul{
+	margin: 0!important;
+	padding: 0!important;
+	list-style-type:square;
+	list-style-position:inside;
+	border:none!important;
+}
+.chromebay li{padding: 5px 0;margin:0;font-size: 12px!important;}
+.chromebay a:link,.chromebay a:visited{color: #0088cc!important;text-decoration: none!important; font-size: 12px!important;font-weight: normal!important;font-family: inherit;}
+.chromebay a:hover{color: #666!important;text-decoration: none!important;}
 .chromebay .undefined{font-size: 12px!important;}
-.chromebay-word{font-size: 32px;font-weight: bold;padding:15px 0!important;font-family: 'Times New Roman','Georgia'!important;text-shadow: 1px 1px 2px #999;}
-.chromebay-pron{font-size: 14px;margin-bottom: 6px!important;font-family: arial,sans-serif;position: relative;}
-.chromebay-pron .tools{position: absolute;top:-7px;right: 10px;}
-.chromebay-pron .tools a{display: inline-block;padding: 2px 6px;background: #efefef;font-size: 12px!important;font-weight: normal!important;font-family: "Microsoft Yahei"!important;}
-.chromebay-pron .tools span{display: inline-block;padding: 2px 6px;font-size: 12px!important;font-weight: normal!important;font-family: "Microsoft Yahei"!important;}
-.chromebay-pron .tools a:hover{background: #e5e5e5;}
-.chromebay-definition{font-size: 14px;font-family: "Microsoft Yahei";line-height: 160%!important;}
-.chromebay-en-definitions{font-size: 12px;font-family: arial,sans-serif;}
-.chromebay-en-definitions .key{margin-top: 5px;line-height: 160%;}
-.chromebay-en-definitions li{line-height: 180%;padding: 2px 0!important;}
-.chromebay-examples div{padding:10px;background: #eee;margin: 10px 0;font-size: 12px!important;}
-.chromebay-examples .entry{color:orange;}
+.chromebay .word{font-size: 32px;font-weight: bold;padding:15px 0!important;font-family: 'Times New Roman','Georgia'!important;text-shadow: 1px 1px 2px #999;}
+.chromebay .pron{font-size: 14px;margin-bottom: 6px!important;font-family: arial,sans-serif;position: relative;}
+.chromebay .pron .tools{position: absolute;top:-7px;right: 10px;}
+.chromebay .pron .tools a{display: inline-block;padding: 2px 6px;background: #efefef;font-size: 12px!important;font-weight: normal!important;font-family: "Microsoft Yahei"!important;}
+.chromebay .pron .tools span{display: inline-block;padding: 2px 6px;font-size: 12px!important;font-weight: normal!important;font-family: "Microsoft Yahei"!important;}
+.chromebay .pron .tools a:hover{background: #e5e5e5;}
+.chromebay .definition{font-size: 14px;font-family: "Microsoft Yahei";line-height: 160%!important;}
+.chromebay .en-definitions{font-size: 12px;font-family: arial,sans-serif;}
+.chromebay .en-definitions .key{margin-top: 5px;line-height: 160%;}
+.chromebay .en-definitions li{line-height: 180%;padding: 2px 0!important;}
+.chromebay .examples div{padding:10px!important;background: #eee;margin: 10px 0!important;font-size: 12px!important;}
+.chromebay .examples .entry{color:orange;}
+.chromebay .cancel{display: inline-block!important;padding-right: 10px;}
 
 .chromebay [class^="icon-"],.chromebay [class*=" icon-"] {
 	display: inline-block;
