--- a/stylesheets/omnix.css
+++ b/stylesheets/omnix.css
@@ -1,18 +1,14 @@
 #chromebay-ominx-container{
 	text-align:left;
-	box-shadow:1px 1px 4px #666;
 	z-index:999999;
 	width:400px;
-	background:#fff;
-	border-width: 1px 16px 1px 1px;
-	border-style: solid;;
-	border-color: #e5e5e5 #9DCE2C #e5e5e5 #e5e5e5; ;
+	background:#F1F1F1;
+	border: 1px solid #ddd;
 	position:fixed;
 	left:0;
 	top:-1px;
 	font-family: "Microsoft Yahei";
 	font-weight: normal;
-	border-bottom-right-radius: 10% 8%;
 	color: #666!important;
 
 }
@@ -40,6 +36,7 @@
 #chromebay-ominx-container .foot{padding:5px 10px;width: 100%;text-align: right;}
 #chromebay-ominx-container .content{padding:10px 20px;line-height: 180%;width:360px;font-size: 12px!important;border:none!important;background: transparent;min-height: 100px;}
 #chromebay-ominx-container .close, #chromebay-capture-container .close{font-size: 12px!important;text-decoration:none!important;color: #999!important; }
+#chromebay-ominx-separator{position:absolute;height:67px;width:33px;top:20px;right:-33px;z-index:99999;}
 .chromebay div, 
 .chromebay table, 
 .chromebay td{width:auto;margin: 0;padding: 0;border:none!important;}
@@ -68,7 +65,7 @@
 .chromebay .en-definitions{font-size: 12px;font-family: arial,sans-serif;}
 .chromebay .en-definitions .key{margin-top: 5px;line-height: 160%;}
 .chromebay .en-definitions li{line-height: 180%;padding: 2px 0!important;}
-.chromebay .examples div{padding:10px!important;background: #eee;margin: 10px 0!important;font-size: 12px!important;}
+.chromebay .examples div{padding:10px!important;background: #fafafa;margin: 10px 0!important;font-size: 12px!important;}
 .chromebay .examples .entry{color:orange;}
 .chromebay .cancel{display: inline-block!important;padding-right: 10px;}
 
